# InvestmentManager

./: .gitignore  ReadMe.md
backend/: Cargo.toml  docker-compose.yml
backend/migrations/: 20260708220846_create_users_table.sql  20260709000001_create_assets_table.sql  20260710000001_create_portfolios_table.sql  20260711153640_create_transactions_table.sql
backend/src/: app.rs  main.rs
backend/src/auth/: extractor.rs  jwt.rs  mod.rs  password.rs
backend/src/config/: settings.rs
backend/src/database/: connection.rs
backend/src/error/: app_error.rs
backend/src/handlers/: asset.rs  auth.rs  dashboard.rs  me.rs  mod.rs  portfolio.rs  report.rs  transaction.rs
backend/src/middleware/: auth.rs
backend/src/models/: asset.rs  mod.rs  portfolio.rs  transaction.rs  user.rs
backend/src/repository/: asset_repository.rs  mod.rs  portfolio_repository.rs  transaction_repository.rs  user_repository.rs
backend/src/routes/: api.rs  frontend.rs  mod.rs  pages.rs
backend/src/services/: asset_service.rs  auth_service.rs  mod.rs  portfolio_service.rs  transaction_service.rs
backend/src/utils/: mod.rs
backend/static/css/: app.css
backend/static/js/: app.js  assets.js  auth.js  dashboard.js  portfolio_detail.js  portfolios.js  reports.js  settings.js  transactions.js
backend/templates/: assets.html  base.html  dashboard.html  index.html  login.html  portfolio_detail.html  portfolios.html  register.html  reports.html  settings.html  transactions.html
backend/templates/partials/: navbar.html  sidebar.html
docs/: API.md  Architecture.md  Database.md  Roadmap.md  (+4 more)
(+1 files in other folders)
