[package]
name = "investment_manager"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Web Framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Templates
askama = "0.14"

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "chrono",
  "uuid",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "10"
password-auth = "1"

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["serde", "v4"] }

# Cookies
axum-extra = { version = "0.12", features = ["cookie"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error Handling
thiserror = "2"
color-eyre = "0.6"
anyhow = "1"
